--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -549,4 +549,46 @@ img {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr;
 }
+
+.edit_button, .add_product{
+  padding: 1em 2em;
+  border-radius: 47px;
+  border: 1px solid #000;
+  background: #D9D9D9;
+  justify-self: flex-end;
+}
+
+.my_product{
+  font-family: Ubuntu;
+  font-size: 1.75em;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.add_product{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+#add_product{
+  color: #000;
+
+  font-family: Ubuntu;
+  font-size: 2em;
+  font-style: italic;
+  font-weight: 300;
+  line-height: normal;
+}
+
+
